fixed artist names being cut off

--- a/HealingArts/ArtistDetails.storyboard
+++ b/HealingArts/ArtistDetails.storyboard
@@ -79,8 +79,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x8O-Pq-f0v">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Dale Chihuly" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whQ-3L-6bz">
-                                                <rect key="frame" x="8" y="317" width="172" height="36"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="Dale Chihuly" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whQ-3L-6bz">
+                                                <rect key="frame" x="8" y="317" width="214" height="36"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="172" id="1z3-qK-KGM"/>
                                                 </constraints>
