--- a/HealingArts/ArtistDetails.storyboard
+++ b/HealingArts/ArtistDetails.storyboard
@@ -103,6 +103,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5B-DL-cNU">
                                                 <rect key="frame" x="109" y="870" width="197" height="30"/>
                                                 <state key="normal" title="Check out their website"/>
+                                                <connections>
+                                                    <action selector="onButtonPressed:" destination="Oxq-Tu-lSA" eventType="touchUpInside" id="UWa-hd-HWC"/>
+                                                </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chihulypic" translatesAutoresizingMaskIntoConstraints="NO" id="QA5-ov-1Uz">
                                                 <rect key="frame" x="0.0" y="34" width="414" height="262"/>
