--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -170,10 +170,9 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZuW-LS-1qd" userLabel="benefits background">
-                                                <rect key="frame" x="0.0" y="1646" width="420" height="629"/>
+                                                <rect key="frame" x="0.0" y="1646" width="414" height="629"/>
                                                 <color key="backgroundColor" red="0.14116021990776062" green="0.14118680357933044" blue="0.14115440845489502" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="420" id="dNT-Uv-Gxc"/>
                                                     <constraint firstAttribute="height" constant="629" id="n7V-p6-3F3"/>
                                                 </constraints>
                                             </imageView>
@@ -285,6 +284,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <rect key="frame" x="38" y="1591" width="338" height="30"/>
                                                 <color key="backgroundColor" red="0.84313725490196079" green="0.098039215686274508" blue="0.12549019607843137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
+                                                    <constraint firstAttribute="width" constant="338" id="SIg-LL-VM8"/>
                                                     <constraint firstAttribute="height" constant="30" id="sEN-BM-8FS"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="BodoniSvtyTwoSCITCTT-Book" family="Bodoni 72 Smallcaps" pointSize="20"/>
@@ -300,7 +300,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <color key="backgroundColor" red="0.2303233496" green="0.2303233496" blue="0.2303233496" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tour3" translatesAutoresizingMaskIntoConstraints="NO" id="rkG-P6-q8x">
-                                                <rect key="frame" x="91" y="2660" width="240" height="128"/>
+                                                <rect key="frame" x="93" y="2660" width="240" height="128"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="128" id="Wiv-cl-Ei4"/>
                                                     <constraint firstAttribute="width" constant="240" id="gaG-91-fED"/>
@@ -314,7 +314,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 </constraints>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tour2" translatesAutoresizingMaskIntoConstraints="NO" id="3CT-jp-uuL">
-                                                <rect key="frame" x="46" y="2504" width="240" height="128"/>
+                                                <rect key="frame" x="48" y="2504" width="240" height="128"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="128" id="7fz-pU-4tA"/>
                                                     <constraint firstAttribute="width" constant="240" id="KvC-Om-tu8"/>
@@ -376,7 +376,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YOK-1h-bhc">
-                                                <rect key="frame" x="45" y="3451" width="320" height="30"/>
+                                                <rect key="frame" x="47" y="3451" width="320" height="30"/>
                                                 <color key="backgroundColor" red="0.8323639035" green="0.22160029410000001" blue="0.18024101849999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="320" id="2uJ-lU-56v"/>
@@ -463,7 +463,6 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                             <constraint firstItem="jcQ-Ye-cZS" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" id="4uk-Ti-z49"/>
                                             <constraint firstItem="X4D-mT-OHF" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="58S-gg-NOz"/>
                                             <constraint firstItem="ZuW-LS-1qd" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" id="7eJ-22-ypZ"/>
-                                            <constraint firstAttribute="trailing" secondItem="ZuW-LS-1qd" secondAttribute="trailing" id="8Jj-le-dAD"/>
                                             <constraint firstItem="Hi8-Ka-WWp" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" id="9Vf-W8-KzR"/>
                                             <constraint firstAttribute="bottom" secondItem="0GV-uk-ggK" secondAttribute="bottom" id="9X8-Yx-TcD"/>
                                             <constraint firstItem="KP0-QF-3pK" firstAttribute="leading" secondItem="g3l-pb-Q37" secondAttribute="trailing" constant="73.5" id="9kp-sl-AEF"/>
@@ -472,7 +471,6 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                             <constraint firstItem="awY-iT-rU6" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" constant="-120" id="Bwf-sz-MqC"/>
                                             <constraint firstItem="y8K-I1-Hbg" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="C3X-Vv-PNX"/>
                                             <constraint firstAttribute="trailing" secondItem="VbV-Av-W4A" secondAttribute="trailing" constant="10" id="CuH-P7-gd4"/>
-                                            <constraint firstAttribute="trailing" secondItem="YOK-1h-bhc" secondAttribute="trailing" constant="45.5" id="Cwy-mz-z5v"/>
                                             <constraint firstItem="Ygr-z5-3m6" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" id="DJd-I3-eAR"/>
                                             <constraint firstAttribute="trailing" secondItem="jcQ-Ye-cZS" secondAttribute="trailing" id="Dgs-Y7-7E5"/>
                                             <constraint firstItem="wLU-pk-HIc" firstAttribute="top" secondItem="y8K-I1-Hbg" secondAttribute="bottom" constant="94" id="EHJ-N8-BAx"/>
@@ -485,7 +483,7 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                             <constraint firstItem="g7R-qF-vXF" firstAttribute="top" secondItem="Ygr-z5-3m6" secondAttribute="bottom" constant="30" id="HGk-1e-k4M"/>
                                             <constraint firstItem="Ch7-FJ-bQj" firstAttribute="top" secondItem="SgD-Qv-JMF" secondAttribute="top" constant="-55" id="HZV-yH-lbq"/>
                                             <constraint firstItem="jcQ-Ye-cZS" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="Ho6-Fs-dqL"/>
-                                            <constraint firstItem="rkG-P6-q8x" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="91" id="Ivs-M2-BVv"/>
+                                            <constraint firstAttribute="trailing" secondItem="ZuW-LS-1qd" secondAttribute="trailing" id="JN4-gz-BSc"/>
                                             <constraint firstItem="rkG-P6-q8x" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" constant="6" id="JU9-A1-tfi"/>
                                             <constraint firstAttribute="trailing" secondItem="Ygr-z5-3m6" secondAttribute="trailing" id="L5q-Mf-4zO"/>
                                             <constraint firstItem="Hi8-Ka-WWp" firstAttribute="top" secondItem="Afz-Fl-5g7" secondAttribute="bottom" constant="38" id="LKQ-Vw-LCZ"/>
@@ -507,12 +505,11 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                             <constraint firstAttribute="trailing" secondItem="oft-hW-fLw" secondAttribute="trailing" constant="25" id="Vfc-FT-emC"/>
                                             <constraint firstAttribute="height" constant="3500" id="Vju-68-yDc"/>
                                             <constraint firstAttribute="trailing" secondItem="jcQ-Ye-cZS" secondAttribute="trailing" id="Vo0-0c-2iS"/>
-                                            <constraint firstItem="vzY-As-81c" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="47" id="XKL-db-D1A"/>
                                             <constraint firstAttribute="trailing" secondItem="3dL-kh-b4c" secondAttribute="trailing" constant="28" id="XbI-oo-N7v"/>
                                             <constraint firstItem="awY-iT-rU6" firstAttribute="top" secondItem="y8K-I1-Hbg" secondAttribute="bottom" constant="19" id="Xfd-60-GGd"/>
-                                            <constraint firstAttribute="trailing" secondItem="fE8-N6-enM" secondAttribute="trailing" constant="38" id="YI1-CM-ooD"/>
                                             <constraint firstItem="UG9-yZ-Avg" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="YSU-Dw-k2h"/>
                                             <constraint firstItem="KP0-QF-3pK" firstAttribute="leading" secondItem="5Uq-VG-Str" secondAttribute="trailing" constant="41.5" id="ZH6-zx-JdT"/>
+                                            <constraint firstItem="vzY-As-81c" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="aeI-9n-h7m"/>
                                             <constraint firstItem="fE8-N6-enM" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="b81-wC-INM"/>
                                             <constraint firstItem="Afz-Fl-5g7" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" constant="-81" id="bYc-Ub-P4P"/>
                                             <constraint firstItem="VbV-Av-W4A" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="10" id="d34-PB-NBW"/>
@@ -527,7 +524,6 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                             <constraint firstItem="KP0-QF-3pK" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" constant="81" id="fFZ-pO-xnI"/>
                                             <constraint firstItem="88C-WB-XQA" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" id="fyj-t6-aDK"/>
                                             <constraint firstItem="5Uq-VG-Str" firstAttribute="top" secondItem="y8K-I1-Hbg" secondAttribute="bottom" constant="37" id="g1h-0H-qdn"/>
-                                            <constraint firstAttribute="trailing" secondItem="vzY-As-81c" secondAttribute="trailing" constant="47" id="gVm-2E-j1y"/>
                                             <constraint firstItem="fE8-N6-enM" firstAttribute="top" secondItem="UG9-yZ-Avg" secondAttribute="bottom" constant="35" id="ghe-aZ-8A5"/>
                                             <constraint firstItem="X4D-mT-OHF" firstAttribute="top" secondItem="ZH2-h9-9T6" secondAttribute="bottom" constant="15" id="gvk-sU-e2t"/>
                                             <constraint firstAttribute="trailing" secondItem="0GV-uk-ggK" secondAttribute="trailing" id="hO7-Y2-gnV"/>
@@ -542,12 +538,10 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                             <constraint firstAttribute="trailing" secondItem="X4D-mT-OHF" secondAttribute="trailing" constant="25" id="qey-hh-Z1M"/>
                                             <constraint firstItem="ZH2-h9-9T6" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="r6o-8o-Jhf"/>
                                             <constraint firstItem="Ch7-FJ-bQj" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="rJm-KR-ymG"/>
-                                            <constraint firstItem="YOK-1h-bhc" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="45" id="rPL-Hx-lLv"/>
                                             <constraint firstItem="jcQ-Ye-cZS" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" id="rtL-iA-qqf"/>
                                             <constraint firstItem="X4D-mT-OHF" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="25" id="sRh-PH-k2e"/>
                                             <constraint firstItem="vzY-As-81c" firstAttribute="top" secondItem="3dL-kh-b4c" secondAttribute="bottom" constant="135" id="tGp-G9-crH"/>
                                             <constraint firstItem="awY-iT-rU6" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" constant="-120" id="tLu-Su-i2d"/>
-                                            <constraint firstItem="3CT-jp-uuL" firstAttribute="leading" secondItem="SgD-Qv-JMF" secondAttribute="leading" constant="46" id="u1a-1h-Uqa"/>
                                             <constraint firstItem="3CT-jp-uuL" firstAttribute="centerX" secondItem="SgD-Qv-JMF" secondAttribute="centerX" constant="-39" id="uaI-wV-VLn"/>
                                             <constraint firstItem="ixV-5d-u33" firstAttribute="top" secondItem="ZU2-uY-lBB" secondAttribute="bottom" constant="73.5" id="uf8-s6-EZX"/>
                                             <constraint firstItem="Afz-Fl-5g7" firstAttribute="top" secondItem="awY-iT-rU6" secondAttribute="bottom" constant="15" id="wVn-wI-TNU"/>
